--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,11 @@ h1, h2, h3, h4, h5, h6{
 	font-weight: 300;
 }
 a {
+	color: #5185E8;
 	transition: opacity 0.2s;
 }
 a:hover {
+	color: #5185E8;
 	opacity: 0.5;
 	transition: opacity 0.2s;
 }
@@ -104,9 +106,6 @@ p {
 	font-size: 40px;
 	font-weight: 900;
 	text-transform: uppercase;
-}
-#left-side p {
-	font-size: 16px;
 }
 #left-side i {
 	padding-left: 10px;
