updated grid; new resume; new section 'Great RGB Colour Game'

--- a/sass/layout/_grid.sass
+++ b/sass/layout/_grid.sass
@@ -1,10 +1,14 @@
 @media (min-width: $md)
 	.grid
 		display: grid
-		grid-template-columns: 42% 58%
+		grid-template-columns: 40vw auto
 
 	.grid-left-side
 		position: fixed
+		width: 40vw
 
 	.grid-right-side
 		grid-column-start: 2
+
+	.container
+		width: 90%
