--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -5,4 +5,7 @@ body
 
 h1, h2, h3, h4, h5, h6
 	font-family: 'Source Sans Pro', sans-serif
-	font-weight: 300
+	font-weight: 700
+
+p
+	font-size: 14px
