--- a/sass/pages/_index.sass
+++ b/sass/pages/_index.sass
@@ -4,13 +4,13 @@
 .left-side
 	color: $lt-black
 	text-align: left
-	font-size: 15px
 	height: 100%
 	padding: 2.5%
 
 	#bio
 		max-width: 500px
-		padding: 8% 0
+		padding: 40px 0
+		text-decoration: none
 
 	h1
 		font-size: 40px
@@ -19,7 +19,7 @@
 
 	h2
 		font-size: 30px
-		padding-top: 3%
+		padding-top: 15px
 
 	button p
 		display: inline-block
@@ -29,9 +29,12 @@
 		padding-left: 10px
 
 	#social-media
+		position: relative
 		text-align: center
 		text-decoration: none
-		padding: 10% 0
+		padding: 40px 0
+		margin: 0 auto
+		vertical-align: bottom
 
 		li
 			display: inline-block
@@ -39,7 +42,7 @@
 
 		i
 			color: #5185E8
-			line-height: 48px
+			line-height: 50px
 			width: 50px
 			height: 50px
 			padding: 0
@@ -56,8 +59,18 @@
 .au
 	background-color: $bg-blue
 
-	p
-		padding-top: 10px
+	img
+		width: 80%
+
+	&.content-container img
+		padding: 2% 0
+
+.cg
+	background-color: $bg-salmon
+
+	img
+		width: 60%
+
 
 /*-------------------------------------------*/
 /*------------ content-continer ------------*/
@@ -69,14 +82,20 @@
 	margin: 0
 
 	img
-		width: 70%
 		padding: 5% 0
 
-	h3
-		font-size: 24px
+	h1
+		font-size: 40px
 		font-weight: 900
+
+	h3
+		font-size: 2em
 		text-transform: uppercase
 
 	i
 		color: #fff
 		padding-left: 5px
+
+	p
+		padding-top: 10px
+		font-size: 16px
