--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,16 +1,12 @@
 @media (min-width: $md) {
-	.grid {
-		display: grid;
-		grid-template-columns: 40vw auto;
-	}
-
 	.grid-left-side {
 		position: fixed;
 		width: 40vw;
 	}
 
 	.grid-right-side {
-		grid-column-start: 2;
+		width: 60vw;
+		margin-left: 40vw;
 	}
 
 	.container {
