--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,14 +1,11 @@
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
 	font-size: 12px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Source Sans Pro', sans-serif;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 700;
-}
-
-p {
-	font-size: 14px;
 }
