--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,22 +1,30 @@
-// ===============
-// footer
-// ===============
-.footer {
-	text-align: center;
+footer {
 
-	div {
-		background-color: $bg-black;
-		padding: 40px 0 30px 0;
-	}
-		
-	li {
-		display: inline-block;
-		font-size: 20px;
-		padding: 0 5px;
-	}
-		
-	i {
-		color: #fff;
+	ul {
+		padding-top: 40px;
+		text-align: center;
+		list-style: none;
+
+		li {
+			display: inline-block;
+			text-decoration: underline;
+		}
+
+		li:not(:last-child) {
+			padding-right: 15px;
+		}
 	}
 }
-	
+
+@media(min-width: $md) {
+	footer {
+
+		ul {
+			text-align: left;
+		}
+
+		li {
+			font-size: 24px;
+		}
+	}
+}
