--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
+
 // imports
  
-// helpers
+// utilities
 @import "utilities/variables";
 
 // base
@@ -8,15 +9,14 @@
 @import "base/typography";
 
 // components
-@import "components/buttons";
 @import "components/footer";
-
-
-// layout
-@import "layout/layout";
 
 // pages
 @import "pages/index";
+@import "pages/index-md";
+
+// helpers
+	// empty
 
 
 // vendors
