--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,126 +1,29 @@
-// ===============
-// left-side
-// ===============
-.left-side {
-	color: $lt-black;
-	text-align: left;
-	height: 100%;
-	padding: 2.5%;
-
-	#bio {
-		padding: 20px 0;
-
-		p {
-		max-width: 500px;
-		padding: 10px 0;
-		text-decoration: none;
-		}
-	}
-
-	
-
-	h1 {
-		font-size: 40px;
-		font-weight: 900;
-		text-transform: uppercase;
-	}
-
-	h2 {
-		font-size: 30px;
-		padding-top: 15px;
-	}
-		
-	button p {
-		display: inline-block;
-	}
-
-	i {
-		display: inline-block;
-		padding-left: 10px;
-	}
-		
-	#social-media {
-		text-align: center;
-		text-decoration: none;
-		padding: 40px 0;
-		margin: 0 auto;
-
-		li {
-			display: inline-block;
-			font-size: 25px;
-		}
-
-		i {
-			color: #5185E8;
-			line-height: 50px;
-			width: 50px;
-			height: 50px;
-			padding: 0;
-			border: 2px solid #5185E8;
-			border-radius: 50px;
-			display: inline-block;	
-		}		
-	}
+div {
+	padding-bottom: 50px;
 }
 
-// ===============
-// right-side
-// ===============
-.right-side {
+p {
 	text-align: center;
+	line-height: 28px;
+	font-size: 14px;
+	font-weight: 100;
 }
 
-.au {
-	background-color: $bg-blue;
+.container {
+	max-width: 85%;
+	margin: 0 auto;
+}
+
+.about {
+	padding-top: 25px;
 
 	img {
-		width: 80%;
-	}
-
-	&.content-container img {
-		padding: 2% 0;
+		display: block;
+		margin: 25px auto;
+		width: 100px;
 	}
 }
 
-.cg {
-	background-color: $bg-salmon;
-
-	img {
-		width: 60%;
-	}
+.resume {
+	cursor: pointer;
 }
-
-// ====================
-// content-container
-// ====================
-.content-container {
-	color: $white;
-	width: 100%;
-	padding: 5% 0 10% 0;
-	margin: 0;
-
-	img {
-		padding: 5% 0;
-	}
-
-	h1 {
-		font-size: 40px;
-		font-weight: 900;
-	}
-
-	h3 {
-		font-size: 2em;
-		text-transform: uppercase;
-	}
-
-	i {
-		color: #fff;
-		padding-left: 5px;
-	}
-
-	p {
-		padding-top: 10px;
-		font-size: 16px;
-	}
-}
-	
