Created portfolio section of site

--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -18,9 +18,13 @@ footer {
 
 @media(min-width: $md) {
 	footer {
-
+		
 		ul {
 			text-align: left;
+
+			.push-right {
+				float: right;
+			}
 		}
 
 		li {
