--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,11 +9,17 @@
 @import "base/typography";
 
 // components
+@import "components/container";
 @import "components/footer";
+@import "components/card";
+@import "components/modal";
+@import "components/back-btn";
 
 // pages
 @import "pages/index";
 @import "pages/index-md";
+@import "pages/portfolio";
+@import "pages/portfolio-md";
 
 // helpers
 	// empty
