--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -76,6 +76,40 @@
     font-size: 3em;
 }
 
+// ||||||||||||||||||||||||||||||||||||||||||||||||||
+
+.close-button-2 {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    font-size: 3em;
+}
+
+.close-button-3 {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    font-size: 3em;
+}
+
+.close-button-4 {
+    float: right;
+    width: 1.5rem;
+    line-height: 1.5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    font-size: 3em;
+}
+
+// ||||||||||||||||||||||||||||||||||||||||||||||||||
+
 .close-button:hover {
 	transform: opacity(0.5);
 }
