--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -3,16 +3,14 @@ $white: #fff;
 $black: #000;
 $blue: #5185E8;
 $lt-black: #4a4a4a;
-
-// background-colours
-$bg-blue: #5185E8;
-$bg-lt-blue: #70A2D3;
-$bg-black: #333;
-$bg-red: #F26762;
-$bg-green: #7CCC93;
-$bg-dk-green: #6A9694;
-$bg-purple: #38365B;
-$bg-salmon: #F57269;
+$blue: #5185E8;
+$lt-blue: #70A2D3;
+$black: #333;
+$red: #F26762;
+$green: #7CCC93;
+$dk-green: #6A9694;
+$purple: #38365B;
+$salmon: #F57269;
 
 // breakpoints
 $sm: 768px;
