--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,14 +1,17 @@
-// colours
+//colours
 $white: #fff;
+$lt-lt-black: #666; // evil!
+$lt-black: #333;
 $black: #000;
-$blue: #5185E8;
-$lt-black: #4a4a4a;
-$blue: #5185E8;
-$lt-blue: #70A2D3;
-$black: #333;
-$red: #F26762;
-$green: #7CCC93;
-$dk-green: #6A9694;
+$blue: #0047b3;
+$lt-grey: #f2f2f2;
+$grey: #d3d3d3;
+$turquoise: #40E0D0;
+$dk-red: #b30000;
+$red: #e60000;
+$dk-mustard: #ffb158;
+$mustard: #ffdb58;
+$lt-green: #85e085;
 $purple: #38365B;
 $salmon: #F57269;
 
