--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -15,12 +15,16 @@ a {
 	text-decoration: none;
 }	
 
-a:hover {
-	color: #5185E8;
-	opacity: 0.5;
-	transition: opacity 0.2s;
-}
+// a:hover {
+// 	color: #5185E8;
+// 	opacity: 0.5;
+// 	transition: opacity 0.2s;
+// }
 
 p {
 	font-size: 15px;
+}
+
+.bold {
+	font-weight: bold;
 }
