--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,11 +1,28 @@
+@font-face {
+	font-family: HKGrotesk;
+	src: url("../type/HKGrotesk-Regular.otf");
+}
+
+@font-face {
+	font-family: HKGrotesk;
+	src: url("../type/HKGrotesk-Light.otf");
+	font-weight: light;
+}
+
+@font-face {
+	font-family: HKGrotesk;
+	src: url("../type/HKGrotesk-Bold.otf");
+	font-weight: bold
+}
+
 body {
-	font-family: 'Roboto', sans-serif;
-	font-weight: 300;
+	font-family: 'HKGrotesk', sans-serif;
+	font-weight: light;
 	font-size: 12px;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	text-align: center;
-	font-family: 'Roboto', sans-serif;
-	font-weight: 700;
+	font-family: 'HKGrotesk', sans-serif;
+	font-weight: bold;
 }
