--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,8 +2,12 @@ footer {
 
 	ul {
 		padding-top: 40px;
-		text-align: center;
+		text-align: left;
 		list-style: none;
+
+		.push-right {
+			float: right;
+		}
 
 		li {
 			display: inline-block;
@@ -28,7 +32,7 @@ footer {
 		}
 
 		li {
-			font-size: 24px;
+			font-size: 16px;
 		}
 	}
 }
