--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
  
 // utilities
 @import "utilities/variables";
+@import "utilities/mixins";
 
 // base
 @import "base/reset";
@@ -14,12 +15,13 @@
 @import "components/card";
 @import "components/modal";
 @import "components/back-btn";
+@import "components/project-page";
 
 // pages
 @import "pages/index";
-@import "pages/index-md";
 @import "pages/portfolio";
-@import "pages/portfolio-md";
+@import "pages/snapchef";
+@import "pages/maclaughlin-grain";
 
 // helpers
 	// empty
