--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -3,14 +3,13 @@ div {
 }
 
 p {
-	text-align: center;
 	line-height: 28px;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: 100;
 }
 
 .about {
-	padding-top: 25px;
+	padding-top: 50px;
 
 	img {
 		display: block;
@@ -27,4 +26,20 @@ p {
 
 .resume {
 	cursor: pointer;
+}
+
+@media(min-width: $md) {
+	p {
+		text-align: left;
+		line-height: 48px;
+		font-size: 32px;
+	}
+
+	.about {
+		img {
+			display: block;
+			margin: 25px 0;
+			width: 100px;
+		}
+	}
 }
